--- a/Sacred Heart Witch/index.html
+++ b/Sacred Heart Witch/index.html
@@ -21,7 +21,7 @@
     <div class="navlink"><a href=blog/journal.html>blog</a></div>
     <div class="navlink"><a href=index.html>home</a></div>
               <div class="navlink"><a href=projects/projects.html>projects</a></div>
-              <div class="navlink"><a href=services/services.html>services</a></div>
+              <div class="navlink"><a href=services/services.html>shop</a></div>
     </div>
 
                    <div class="main">
@@ -46,6 +46,8 @@
     <p><img src="photos/cowboyloveblink.gif"></p>
         <p><script type="text/javascript" src="//counter.websiteout.net/js/22/8/0/0"></script></p>
     established may 2022 
+     <div class="inner"><div class="inner img"><a href="https://neocities.org/site/sacredheartwitch"><img src=photos/neocities-pink2.gif></a>
+    </div>
                        </div>
 
     </div></div></body>
