--- a/Sacred Heart Witch/template.html
+++ b/Sacred Heart Witch/template.html
@@ -20,7 +20,7 @@
     <div class="navlink"><a href=blog/journal.html>blog</a></div>
     <div class="navlink"><a href=index.html>home</a></div>
               <div class="navlink"><a href=projects/projects.html>projects</a></div>
-              <div class="navlink"><a href=services/services.html>services</a></div>
+              <div class="navlink"><a href=services/services.html>shop</a></div>
               
     </div>
 
