--- a/Sacred Heart Witch/updates.html
+++ b/Sacred Heart Witch/updates.html
@@ -28,7 +28,11 @@
                    <div class="main">
                        
       <H1> Updates </H1>
-<article><h2><b>6/18/22 23:07</b></h2></article>
+<article><h2><b>6/19/22; 10:00</b></h2>
+    <p>-set up shop page</p>
+    <p>-added neocities profile link in footer</p>
+    <p>-fixed some navbar discrepencies</p>
+                       </article>
                        
 
 <article><h2><b>6/18/22; 16:29</b></h2>
@@ -42,6 +46,8 @@
     <h2>thanks for coming!</h2>
     <p><img src="photos/cowboyloveblink.gif"></p>
         <p><script type="text/javascript" src="//counter.websiteout.net/js/22/8/0/0"></script></p>
+       <div class="inner"><div class="inner img"><a href="https://neocities.org/site/sacredheartwitch"><img src=photos/neocities-pink2.gif></a>
+    </div>
     established may 2022
                        </div>
 
