--- a/Sacred Heart Witch/index.html
+++ b/Sacred Heart Witch/index.html
@@ -32,7 +32,7 @@
     <p>I'm also here as a means of quitting Social Media. For the past few years I've wasted hours of my life locked into endless scrolling, making easy money for big tech companies that couldn't care less about me. And it was draining the life out of me. It wasn't like I had communities there, or friends or things I couldn't find elsewhere. I was just addicted to the soul sucking scrolling.</p>
     <p>I knew something had to change.</p>
     <p> So I deleted all my accounts, and now I'm here. And this place can be all the things *I* like, without some nepotism baby in oregon trying to sell me her $30 plastic earrings, or some corporation cataloguing every thought in my head.</p>
-    <p>this isn't for everyone! but it's my journey, and I hope you like the little home I've made for myself here :)</p>
+    <p>this isn't for everyone! but it's my journey, and I hope you like the little home I've made for myself here :))</p>
     <br>
     <br>
     <br>
